[gd_scene load_steps=10 format=2]

[ext_resource path="res://Camera2D.gd" type="Script" id=1]
[ext_resource path="res://HUD.gd" type="Script" id=2]
[ext_resource path="res://world/GameWorld.gd" type="Script" id=3]
[ext_resource path="res://world/tiles/my_map.tscn" type="PackedScene" id=4]
[ext_resource path="res://world/grid/Grid.gd" type="Script" id=5]
[ext_resource path="res://Cursor.gd" type="Script" id=6]
[ext_resource path="res://turret/Turret.tscn" type="PackedScene" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1600, 1600 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.25098, 0.25098, 0.25098, 0.627451 )

[node name="GameWorld" type="Node2D"]
script = ExtResource( 3 )

[node name="Grid" type="Area2D" parent="."]
z_index = -1
script = ExtResource( 5 )
size = Vector2( 50, 50 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Grid"]
visible = false
position = Vector2( 1600, 1600 )
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="Grid"]
position = Vector2( 340, 211 )
anchor_mode = 0
current = true
script = ExtResource( 1 )

[node name="HUD" type="Panel" parent="Grid/Camera2D"]
margin_right = 300.0
margin_bottom = 900.0
custom_styles/panel = SubResource( 2 )
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="Grid/Camera2D/HUD"]
margin_left = 40.0
margin_top = 40.0
margin_right = 260.0
margin_bottom = 860.0

[node name="VBoxContainer" type="VBoxContainer" parent="Grid/Camera2D/HUD/MarginContainer"]
margin_right = 220.0
margin_bottom = 820.0
alignment = 1

[node name="Shed Button" type="Button" parent="Grid/Camera2D/HUD/MarginContainer/VBoxContainer"]
margin_top = 388.0
margin_right = 220.0
margin_bottom = 408.0
text = "Add Shed"

[node name="Turret Button" type="Button" parent="Grid/Camera2D/HUD/MarginContainer/VBoxContainer"]
margin_top = 412.0
margin_right = 220.0
margin_bottom = 432.0
text = "Add Turret"

[node name="Cursor" type="Node2D" parent="Grid"]
script = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="Turret" parent="Grid" instance=ExtResource( 7 )]
modulate = Color( 1, 0.329412, 0.258824, 0.521569 )
position = Vector2( 927, 546 )

[node name="Map" parent="Grid" instance=ExtResource( 4 )]
scale = Vector2( 4, 4 )
z_index = -1

[connection signal="mouse_entered" from="Grid" to="Grid" method="_on_Grid_mouse_entered"]
[connection signal="mouse_exited" from="Grid" to="Grid" method="_on_Grid_mouse_exited"]
[connection signal="mouse_grid_enter" from="Grid" to="Grid/Cursor" method="_on_Grid_mouse_grid_enter"]
[connection signal="mouse_grid_leave" from="Grid" to="Grid/Cursor" method="_on_Grid_mouse_grid_leave"]
[connection signal="cursor_move" from="Grid/Camera2D" to="Grid/Cursor" method="_on_cursor_move"]
[connection signal="pressed" from="Grid/Camera2D/HUD/MarginContainer/VBoxContainer/Shed Button" to="." method="_on_Shed_Button_pressed"]
[connection signal="pressed" from="Grid/Camera2D/HUD/MarginContainer/VBoxContainer/Turret Button" to="." method="_on_Turret_Button_pressed"]
